--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.0
+flask-cors
 Flask-BasicAuth==0.2.0
 gunicorn==21.2.0
 idna==3.4
