--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ click==8.1.7
 Flask==3.0.0
 flask-cors
 Flask-BasicAuth==0.2.0
-gunicorn==21.2.0
+gunicorn
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
