--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -2,6 +2,9 @@ runtime: python
 env: flex
 entrypoint: gunicorn -b :$PORT main:app
 
+runtime_config:
+  operating_system: ubuntu22
+
 env_variables:
   BASIC_AUTH_USERNAME: $BASIC_AUTH_USERNAME
   BASIC_AUTH_PASSWORD: $BASIC_AUTH_PASSWORD
